# aws-redshift-to-rds

./: .gitignore  Dockerfile  README.md  aws-redshift-to-rds.cabal  copytables.cabal  copytables.config.example  deploy.sh
config/: copytables.config.example
src/: DB.hs  Main.hs  Options.hs  Run.hs
