name:             copytables
version:          0.1.0
author:           Sönke Hahn
maintainer:       soenke.hahn@zalora.com
category:         Database
build-type:       Simple
cabal-version:    >= 1.10

executable copytables
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  main-is:
    Main.hs
  build-depends:
    base == 4.*,
    postgresql-simple,
    safe,
    bytestring,
    optparse-applicative,
    string-conversions,
    interpolate
  ghc-options:
    -Wall -Werror -fno-warn-name-shadowing
    -threaded
